unpackaged/main/default/objects/Premium_Group__c/Premium_Group__c.object-meta.xml
<CustomObject>
    <label>Premium Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premium Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>