unpackaged/main/default/objects/Premium_Group__c/fields/Premium_Group_Category__c.field-meta.xml
<CustomField>
    <fullName>Premium_Group_Category__c</fullName>
    <description>Premium Group Category</description>
    <inlineHelpText>Premium Group Category</inlineHelpText>
    <label>Premium Group Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>