unpackaged/main/default/objects/Premium_Group__c/fields/Premium_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Premium_Group_Name__c</fullName>
    <label>Premium Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>