unpackaged/main/default/objects/Premium_Group__c/fields/Premium_Tag__c.field-meta.xml
<CustomField>
    <fullName>Premium_Tag__c</fullName>
    <description>Tag used for charging Premiums.</description>
    <inlineHelpText>Tag used for charging Premiums.</inlineHelpText>
    <label>Premium Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>