unpackaged/main/default/objects/Premium_Group__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Indicate the Short Description for this entry</description>
    <inlineHelpText>Indicate the Short Description for this entry</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>