unpackaged/main/default/objects/Premium_Group__c/validationRules/Name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_required</fullName>
    <active>true</active>
    <description>Name is required field</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Name is required field</errorMessage>
</ValidationRule>